// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DropDown: render should return base dropdown with passed array value 1`] = `
<div>
  <Select
    className="ui-dropdown"
    clearable={false}
    disabled={false}
    isLoading={false}
    joinValues={false}
    menuBuffer={0}
    menuRenderer={[Function]}
    multi={false}
    onChange={[Function]}
    options={Array []}
    placeholder=""
    required={false}
    scrollMenuIntoView={false}
    searchable={false}
    simpleValue={false}
    value={Array []}
    valueRenderer={null}
  />
</div>
`;

exports[`DropDown: render should return base dropdown with passed number value 1`] = `
<div>
  <Select
    className="ui-dropdown"
    clearable={false}
    disabled={false}
    isLoading={false}
    joinValues={false}
    menuBuffer={0}
    menuRenderer={[Function]}
    multi={false}
    onChange={[Function]}
    options={Array []}
    placeholder=""
    required={false}
    scrollMenuIntoView={false}
    searchable={false}
    simpleValue={false}
    value={1}
    valueRenderer={null}
  />
</div>
`;

exports[`DropDown: render should return base dropdown with passed string value 1`] = `
<div>
  <Select
    className="ui-dropdown"
    clearable={false}
    disabled={false}
    isLoading={false}
    joinValues={false}
    menuBuffer={0}
    menuRenderer={[Function]}
    multi={false}
    onChange={[Function]}
    options={Array []}
    placeholder=""
    required={false}
    scrollMenuIntoView={false}
    searchable={false}
    simpleValue={false}
    value="testValue"
    valueRenderer={null}
  />
</div>
`;

exports[`DropDown: render should return base dropdown with required fields 1`] = `
<div>
  <Select
    className="ui-dropdown"
    clearable={false}
    disabled={false}
    isLoading={false}
    joinValues={false}
    menuBuffer={0}
    menuRenderer={[Function]}
    multi={false}
    onChange={[Function]}
    options={Array []}
    placeholder=""
    required={false}
    scrollMenuIntoView={false}
    searchable={false}
    simpleValue={false}
    valueRenderer={null}
  />
</div>
`;

exports[`DropDown: render should return clearable dropdown 1`] = `
<div>
  <Select
    className="ui-dropdown"
    disabled={false}
    isLoading={false}
    joinValues={false}
    menuBuffer={0}
    menuRenderer={[Function]}
    multi={false}
    onChange={[Function]}
    options={Array []}
    placeholder=""
    required={false}
    scrollMenuIntoView={false}
    searchable={false}
    simpleValue={false}
    valueRenderer={null}
  />
</div>
`;

exports[`DropDown: render should return disabled dropdown 1`] = `
<div>
  <Select
    className="ui-dropdown"
    clearable={false}
    disabled={true}
    isLoading={false}
    joinValues={false}
    menuBuffer={0}
    menuRenderer={[Function]}
    multi={false}
    onChange={[Function]}
    options={Array []}
    placeholder=""
    required={false}
    scrollMenuIntoView={false}
    searchable={false}
    simpleValue={false}
    valueRenderer={null}
  />
</div>
`;

exports[`DropDown: render should return dropdown with custom class name 1`] = `
<div>
  <Select
    className="ui-dropdown my-custom-class"
    clearable={false}
    disabled={false}
    isLoading={false}
    joinValues={false}
    menuBuffer={0}
    menuRenderer={[Function]}
    multi={false}
    onChange={[Function]}
    options={Array []}
    placeholder=""
    required={false}
    scrollMenuIntoView={false}
    searchable={false}
    simpleValue={false}
    valueRenderer={null}
  />
</div>
`;

exports[`DropDown: render should return dropdown with icon 1`] = `
<div>
  <Select
    className="ui-dropdown"
    clearable={false}
    disabled={false}
    isLoading={false}
    joinValues={false}
    menuBuffer={0}
    menuRenderer={[Function]}
    multi={false}
    onChange={[Function]}
    options={Array []}
    placeholder=""
    required={false}
    scrollMenuIntoView={false}
    searchable={false}
    simpleValue={false}
    valueRenderer={[Function]}
  />
</div>
`;

exports[`DropDown: render should return dropdown with passed name 1`] = `
<div>
  <Select
    className="ui-dropdown"
    clearable={false}
    disabled={false}
    isLoading={false}
    joinValues={false}
    menuBuffer={0}
    menuRenderer={[Function]}
    multi={false}
    name="testName"
    onChange={[Function]}
    options={Array []}
    placeholder=""
    required={false}
    scrollMenuIntoView={false}
    searchable={false}
    simpleValue={false}
    valueRenderer={null}
  />
</div>
`;

exports[`DropDown: render should return dropdown with shifting viewport enabled 1`] = `
<div>
  <Select
    className="ui-dropdown"
    clearable={false}
    disabled={false}
    isLoading={false}
    joinValues={false}
    menuBuffer={0}
    menuRenderer={[Function]}
    multi={false}
    onChange={[Function]}
    options={Array []}
    placeholder=""
    required={false}
    searchable={false}
    simpleValue={false}
    valueRenderer={null}
  />
</div>
`;

exports[`DropDown: render should return dropdown with status 1`] = `
<div>
  <Select
    className="ui-dropdown ui-dropdown_error"
    clearable={false}
    disabled={false}
    isLoading={false}
    joinValues={false}
    menuBuffer={0}
    menuRenderer={[Function]}
    multi={false}
    onChange={[Function]}
    options={Array []}
    placeholder=""
    required={false}
    scrollMenuIntoView={false}
    searchable={false}
    simpleValue={false}
    valueRenderer={null}
  />
</div>
`;

exports[`DropDown: render should return filter dropdown 1`] = `
<div>
  <Select
    className="ui-dropdown ui-dropdown_filter ui-dropdown_state-active"
    clearable={false}
    disabled={false}
    isLoading={false}
    joinValues={false}
    menuBuffer={0}
    menuRenderer={[Function]}
    multi={true}
    onChange={[Function]}
    optionComponent={[Function]}
    options={
      Array [
        Object {
          "checked": true,
        },
      ]
    }
    placeholder=""
    required={false}
    scrollMenuIntoView={false}
    searchable={false}
    simpleValue={false}
    valueRenderer={null}
  />
</div>
`;

exports[`DropDown: render should return multi dropdown 1`] = `
<div>
  <Select
    className="ui-dropdown"
    clearable={false}
    disabled={false}
    isLoading={false}
    joinValues={false}
    menuBuffer={0}
    menuRenderer={[Function]}
    multi={true}
    onChange={[Function]}
    options={Array []}
    placeholder=""
    required={false}
    scrollMenuIntoView={false}
    searchable={false}
    simpleValue={false}
    valueRenderer={null}
  />
</div>
`;

exports[`DropDown: render should return searchable dropdown 1`] = `
<div>
  <Select
    className="ui-dropdown"
    clearable={false}
    disabled={false}
    isLoading={false}
    joinValues={false}
    menuBuffer={0}
    menuRenderer={[Function]}
    multi={false}
    onChange={[Function]}
    options={Array []}
    placeholder=""
    required={false}
    scrollMenuIntoView={false}
    simpleValue={false}
    valueRenderer={null}
  />
</div>
`;
